Assignment/assignment2-1.1/initial/src/main/bkit/parser/.antlr/BKITParser.py
# Generated from c:\Users\phatnt\Desktop\PPL\Assignment\assignment2-1.1\initial\src\main\bkit\parser\BKIT.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class BKITParser ( Parser ):

    grammarFileName = "BKIT.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'Body'", "'Else'", "'EndFor'", "'If'", "'Var'", "'EndDo'", 
                     "'Break'", "'ElseIf'", "'EndWhile'", "'Parameter'", 
                     "'While'", "'Continue'", "'EndBody'", "'For'", "'Return'", 
                     "'True'", "'Do'", "'EndIf'", "'Function'", "'Then'", 
                     "'False'", "'+'", "'+.'", "'-'", "'-.'", "'*'", "'*.'", 
                     "'\\'", "'\\.'", "'%'", "'='", "'!'", "'&&'", "'||'", 
                     "'=='", "'!='", "'<'", "'>'", "'<='", "'>='", "'=/='", 
                     "'<.'", "'>.'", "'<=.'", "'>=.'", "'['", "']'", "';'", 
                     "':'", "','", "'{'", "'}'", "<INVALID>", "'('", "')'" ]

    symbolicNames = [ "<INVALID>", "ID", "COMMENTLINE", "WS", "BODY", "ELSE", 
                      "ENDFOR", "IF", "VAR", "ENDDO", "BREAK", "ELSEIF", 
                      "ENDWHILE", "PARAMETER", "WHILE", "CONTINUE", "ENDBODY", 
                      "FOR", "RETURN", "TRUE", "DO", "ENDIF", "FUNCTION", 
                      "THEN", "FALSE", "INTADD", "FLOATADD", "INTSIGNNEG", 
                      "FLOATSIGNNEG", "INTMUL", "FLOATMUL", "INTDIV", "FLOATDIV", 
                      "INTREM", "ASSIGN", "NEG", "AND", "OR", "EQ", "INEQ", 
                      "ILT", "IGT", "ILTOEQ", "IGTOEQ", "FNEQ", "FLT", "FGLT", 
                      "FLTOEQ", "FGTOEQ", "LSB", "RSB", "SEMI", "COLON", 
                      "COMMA", "LBRACE", "RBRACE", "DOT", "LPAREN", "RPAREN", 
                      "INTLIT", "FLOATLIT", "BOOLEANLIT", "STRINGLIT", "ERROR_CHAR", 
                      "UNCLOSE_STRING", "ILLEGAL_ESCAPE", "UNTERMINATED_COMMENT" ]

    RULE_program = 0
    RULE_declaration = 1
    RULE_vardeclare = 2
    RULE_varlist = 3
    RULE_varinit = 4
    RULE_valuelist = 5
    RULE_var = 6
    RULE_funcdeclare = 7
    RULE_paralist = 8
    RULE_blockstm = 9
    RULE_call_func = 10
    RULE_stm = 11
    RULE_var_decl_and_stm = 12
    RULE_if_stm = 13
    RULE_for_stm = 14
    RULE_while_stm = 15
    RULE_do_while_stm = 16
    RULE_return_stm = 17
    RULE_continue_stm = 18
    RULE_break_stm = 19
    RULE_assign_stm = 20
    RULE_callfunc_stm = 21
    RULE_exp = 22
    RULE_exp1 = 23
    RULE_exp2 = 24
    RULE_exp3 = 25
    RULE_exp4 = 26
    RULE_exp5 = 27
    RULE_exp6 = 28
    RULE_exp7 = 29
    RULE_exp8 = 30
    RULE_operand = 31
    RULE_litlist = 32
    RULE_arraylist = 33

    ruleNames =  [ "program", "declaration", "vardeclare", "varlist", "varinit", 
                   "valuelist", "var", "funcdeclare", "paralist", "blockstm", 
                   "call_func", "stm", "var_decl_and_stm", "if_stm", "for_stm", 
                   "while_stm", "do_while_stm", "return_stm", "continue_stm", 
                   "break_stm", "assign_stm", "callfunc_stm", "exp", "exp1", 
                   "exp2", "exp3", "exp4", "exp5", "exp6", "exp7", "exp8", 
                   "operand", "litlist", "arraylist" ]

    EOF = Token.EOF
    ID=1
    COMMENTLINE=2
    WS=3
    BODY=4
    ELSE=5
    ENDFOR=6
    IF=7
    VAR=8
    ENDDO=9
    BREAK=10
    ELSEIF=11
    ENDWHILE=12
    PARAMETER=13
    WHILE=14
    CONTINUE=15
    ENDBODY=16
    FOR=17
    RETURN=18
    TRUE=19
    DO=20
    ENDIF=21
    FUNCTION=22
    THEN=23
    FALSE=24
    INTADD=25
    FLOATADD=26
    INTSIGNNEG=27
    FLOATSIGNNEG=28
    INTMUL=29
    FLOATMUL=30
    INTDIV=31
    FLOATDIV=32
    INTREM=33
    ASSIGN=34
    NEG=35
    AND=36
    OR=37
    EQ=38
    INEQ=39
    ILT=40
    IGT=41
    ILTOEQ=42
    IGTOEQ=43
    FNEQ=44
    FLT=45
    FGLT=46
    FLTOEQ=47
    FGTOEQ=48
    LSB=49
    RSB=50
    SEMI=51
    COLON=52
    COMMA=53
    LBRACE=54
    RBRACE=55
    DOT=56
    LPAREN=57
    RPAREN=58
    INTLIT=59
    FLOATLIT=60
    BOOLEANLIT=61
    STRINGLIT=62
    ERROR_CHAR=63
    UNCLOSE_STRING=64
    ILLEGAL_ESCAPE=65
    UNTERMINATED_COMMENT=66

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(BKITParser.EOF, 0)

        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.DeclarationContext)
            else:
                return self.getTypedRuleContext(BKITParser.DeclarationContext,i)


        def getRuleIndex(self):
            return BKITParser.RULE_program




    def program(self):

        localctx = BKITParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 69 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 68
                self.declaration()
                self.state = 71 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==BKITParser.VAR or _la==BKITParser.FUNCTION):
                    break

            self.state = 73
            self.match(BKITParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vardeclare(self):
            return self.getTypedRuleContext(BKITParser.VardeclareContext,0)


        def funcdeclare(self):
            return self.getTypedRuleContext(BKITParser.FuncdeclareContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_declaration




    def declaration(self):

        localctx = BKITParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declaration)
        try:
            self.state = 77
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BKITParser.VAR]:
                self.enterOuterAlt(localctx, 1)
                self.state = 75
                self.vardeclare()
                pass
            elif token in [BKITParser.FUNCTION]:
                self.enterOuterAlt(localctx, 2)
                self.state = 76
                self.funcdeclare()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VardeclareContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(BKITParser.VAR, 0)

        def COLON(self):
            return self.getToken(BKITParser.COLON, 0)

        def varlist(self):
            return self.getTypedRuleContext(BKITParser.VarlistContext,0)


        def SEMI(self):
            return self.getToken(BKITParser.SEMI, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_vardeclare




    def vardeclare(self):

        localctx = BKITParser.VardeclareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_vardeclare)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self.match(BKITParser.VAR)
            self.state = 80
            self.match(BKITParser.COLON)
            self.state = 81
            self.varlist()
            self.state = 82
            self.match(BKITParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarlistContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varinit(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.VarinitContext)
            else:
                return self.getTypedRuleContext(BKITParser.VarinitContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.COMMA)
            else:
                return self.getToken(BKITParser.COMMA, i)

        def getRuleIndex(self):
            return BKITParser.RULE_varlist




    def varlist(self):

        localctx = BKITParser.VarlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_varlist)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self.varinit()
            self.state = 89
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.COMMA:
                self.state = 85
                self.match(BKITParser.COMMA)
                self.state = 86
                self.varinit()
                self.state = 91
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarinitContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var(self):
            return self.getTypedRuleContext(BKITParser.VarContext,0)


        def ASSIGN(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.ASSIGN)
            else:
                return self.getToken(BKITParser.ASSIGN, i)

        def valuelist(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.ValuelistContext)
            else:
                return self.getTypedRuleContext(BKITParser.ValuelistContext,i)


        def getRuleIndex(self):
            return BKITParser.RULE_varinit




    def varinit(self):

        localctx = BKITParser.VarinitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_varinit)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.var()
            self.state = 97
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.ASSIGN:
                self.state = 93
                self.match(BKITParser.ASSIGN)
                self.state = 94
                self.valuelist()
                self.state = 99
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ValuelistContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def litlist(self):
            return self.getTypedRuleContext(BKITParser.LitlistContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_valuelist




    def valuelist(self):

        localctx = BKITParser.ValuelistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_valuelist)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.litlist()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def LSB(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.LSB)
            else:
                return self.getToken(BKITParser.LSB, i)

        def INTLIT(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.INTLIT)
            else:
                return self.getToken(BKITParser.INTLIT, i)

        def RSB(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.RSB)
            else:
                return self.getToken(BKITParser.RSB, i)

        def getRuleIndex(self):
            return BKITParser.RULE_var




    def var(self):

        localctx = BKITParser.VarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_var)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.match(BKITParser.ID)
            self.state = 108
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.LSB:
                self.state = 103
                self.match(BKITParser.LSB)
                self.state = 104
                self.match(BKITParser.INTLIT)
                self.state = 105
                self.match(BKITParser.RSB)
                self.state = 110
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncdeclareContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION(self):
            return self.getToken(BKITParser.FUNCTION, 0)

        def COLON(self):
            return self.getToken(BKITParser.COLON, 0)

        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def blockstm(self):
            return self.getTypedRuleContext(BKITParser.BlockstmContext,0)


        def paralist(self):
            return self.getTypedRuleContext(BKITParser.ParalistContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_funcdeclare




    def funcdeclare(self):

        localctx = BKITParser.FuncdeclareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_funcdeclare)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self.match(BKITParser.FUNCTION)
            self.state = 112
            self.match(BKITParser.COLON)
            self.state = 113
            self.match(BKITParser.ID)
            self.state = 115
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKITParser.PARAMETER:
                self.state = 114
                self.paralist()


            self.state = 117
            self.blockstm()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParalistContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PARAMETER(self):
            return self.getToken(BKITParser.PARAMETER, 0)

        def COLON(self):
            return self.getToken(BKITParser.COLON, 0)

        def var(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.VarContext)
            else:
                return self.getTypedRuleContext(BKITParser.VarContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.COMMA)
            else:
                return self.getToken(BKITParser.COMMA, i)

        def getRuleIndex(self):
            return BKITParser.RULE_paralist




    def paralist(self):

        localctx = BKITParser.ParalistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_paralist)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.match(BKITParser.PARAMETER)
            self.state = 120
            self.match(BKITParser.COLON)
            self.state = 121
            self.var()
            self.state = 126
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.COMMA:
                self.state = 122
                self.match(BKITParser.COMMA)
                self.state = 123
                self.var()
                self.state = 128
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockstmContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BODY(self):
            return self.getToken(BKITParser.BODY, 0)

        def COLON(self):
            return self.getToken(BKITParser.COLON, 0)

        def var_decl_and_stm(self):
            return self.getTypedRuleContext(BKITParser.Var_decl_and_stmContext,0)


        def ENDBODY(self):
            return self.getToken(BKITParser.ENDBODY, 0)

        def DOT(self):
            return self.getToken(BKITParser.DOT, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_blockstm




    def blockstm(self):

        localctx = BKITParser.BlockstmContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_blockstm)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self.match(BKITParser.BODY)
            self.state = 130
            self.match(BKITParser.COLON)
            self.state = 131
            self.var_decl_and_stm()
            self.state = 132
            self.match(BKITParser.ENDBODY)
            self.state = 133
            self.match(BKITParser.DOT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Call_funcContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def LPAREN(self):
            return self.getToken(BKITParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(BKITParser.RPAREN, 0)

        def exp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.ExpContext)
            else:
                return self.getTypedRuleContext(BKITParser.ExpContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.COMMA)
            else:
                return self.getToken(BKITParser.COMMA, i)

        def getRuleIndex(self):
            return BKITParser.RULE_call_func




    def call_func(self):

        localctx = BKITParser.Call_funcContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_call_func)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            self.match(BKITParser.ID)
            self.state = 136
            self.match(BKITParser.LPAREN)
            self.state = 145
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << BKITParser.ID) | (1 << BKITParser.TRUE) | (1 << BKITParser.FALSE) | (1 << BKITParser.INTSIGNNEG) | (1 << BKITParser.FLOATSIGNNEG) | (1 << BKITParser.NEG) | (1 << BKITParser.LBRACE) | (1 << BKITParser.LPAREN) | (1 << BKITParser.INTLIT) | (1 << BKITParser.FLOATLIT) | (1 << BKITParser.STRINGLIT))) != 0):
                self.state = 137
                self.exp()
                self.state = 142
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==BKITParser.COMMA:
                    self.state = 138
                    self.match(BKITParser.COMMA)
                    self.state = 139
                    self.exp()
                    self.state = 144
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 147
            self.match(BKITParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def if_stm(self):
            return self.getTypedRuleContext(BKITParser.If_stmContext,0)


        def for_stm(self):
            return self.getTypedRuleContext(BKITParser.For_stmContext,0)


        def while_stm(self):
            return self.getTypedRuleContext(BKITParser.While_stmContext,0)


        def do_while_stm(self):
            return self.getTypedRuleContext(BKITParser.Do_while_stmContext,0)


        def return_stm(self):
            return self.getTypedRuleContext(BKITParser.Return_stmContext,0)


        def continue_stm(self):
            return self.getTypedRuleContext(BKITParser.Continue_stmContext,0)


        def break_stm(self):
            return self.getTypedRuleContext(BKITParser.Break_stmContext,0)


        def assign_stm(self):
            return self.getTypedRuleContext(BKITParser.Assign_stmContext,0)


        def callfunc_stm(self):
            return self.getTypedRuleContext(BKITParser.Callfunc_stmContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_stm




    def stm(self):

        localctx = BKITParser.StmContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_stm)
        try:
            self.state = 158
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 149
                self.if_stm()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 150
                self.for_stm()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 151
                self.while_stm()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 152
                self.do_while_stm()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 153
                self.return_stm()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 154
                self.continue_stm()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 155
                self.break_stm()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 156
                self.assign_stm()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 157
                self.callfunc_stm()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_decl_and_stmContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vardeclare(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.VardeclareContext)
            else:
                return self.getTypedRuleContext(BKITParser.VardeclareContext,i)


        def stm(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.StmContext)
            else:
                return self.getTypedRuleContext(BKITParser.StmContext,i)


        def getRuleIndex(self):
            return BKITParser.RULE_var_decl_and_stm




    def var_decl_and_stm(self):

        localctx = BKITParser.Var_decl_and_stmContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_var_decl_and_stm)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 163
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.VAR:
                self.state = 160
                self.vardeclare()
                self.state = 165
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 169
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,11,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 166
                    self.stm() 
                self.state = 171
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,11,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class If_stmContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(BKITParser.IF, 0)

        def exp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.ExpContext)
            else:
                return self.getTypedRuleContext(BKITParser.ExpContext,i)


        def THEN(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.THEN)
            else:
                return self.getToken(BKITParser.THEN, i)

        def var_decl_and_stm(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Var_decl_and_stmContext)
            else:
                return self.getTypedRuleContext(BKITParser.Var_decl_and_stmContext,i)


        def ENDIF(self):
            return self.getToken(BKITParser.ENDIF, 0)

        def DOT(self):
            return self.getToken(BKITParser.DOT, 0)

        def ELSEIF(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.ELSEIF)
            else:
                return self.getToken(BKITParser.ELSEIF, i)
